// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccountCard renders the card 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 8px;
  padding: 16px;
  margin-bottom: 8px;
  color: purple;
  background-color: #5E26FF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-shadow: 0 0.7px 2.2px -8px rgba(0,0,0,0.18),0 1.7px 5.4px rgba(0,0,0,0.129),0 3.1px 10.1px rgba(0,0,0,0.107),0 5.6px 18.1px rgba(0,0,0,0.09),0 10.4px 33.8px rgba(0,0,0,0.073),0 25px 81px rgba(0,0,0,0.051);
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  color: #E0D7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  margin-right: 16px;
  color: #E0D7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  min-width: 0;
  box-sizing: border-box;
  color: #E0D7FE;
}

.c7 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c16 {
  cursor: pointer;
  border: 1px solid #E0D7FE;
  background-color: transparent;
  border-color: #E0D7FE;
  color: #E0D7FE;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  border-width: 1px;
  border-radius: 4px;
}

.c16:hover {
  opacity: 0.8;
}

.c17 {
  cursor: pointer;
  border: 1px solid #E0D7FE;
  background-color: transparent;
  border-color: #E0D7FE;
  color: #E0D7FE;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin-left: 8px;
  padding: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  border-width: 1px;
  border-radius: 4px;
}

.c17:hover {
  opacity: 0.8;
}

.c11 {
  width: 24;
  height: 24;
}

.c8 {
  font-size: 2rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  overflow: hidden;
  margin: 0;
}

.c4 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c6 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c13 {
  color: #E0D7FE;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 0;
  margin-left: 4px;
}

.c10 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-width: 1px;
  border-radius: 4px;
  opacity: 1 !important;
  border: 0;
  background: transparent;
  padding: 0;
  outline: none;
}

.c10:hover {
  opacity: 0.8;
}

.c12 {
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
}

.c9:hover .c12 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c14 {
  -webkit-transition: 0.18s ease-in;
  transition: 0.18s ease-in;
  opacity: 0;
}

.c9:hover .c14 {
  opacity: 1;
}

<div
  class="c0"
  color="purple"
  display="flex"
  height="300px"
  width="300px"
>
  <div
    class="c1"
    color="card.account.color"
    display="flex"
  >
    <div
      class="c2"
      color="card.account.color"
      display="flex"
      size="6"
    >
      <h3
        class="c3"
      >
        Ac
      </h3>
    </div>
    <p
      class="c4"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      Account
    </p>
  </div>
  <div
    class="c5"
    color="card.account.color"
  >
    <p
      class="c6"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      Your Address
    </p>
    <div
      class="c7"
      display="flex"
    >
      <h2
        class="c8"
        font-family="RT-Alias-Grotesk"
        font-size="5"
        font-weight="1"
        overflow="hidden"
      >
        t0123 ... 6789
      </h2>
      <button
        class="c9 c10"
        display="flex"
        font-size="3"
        height="6"
      >
        <svg
          class="c11 c12"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#1A0066"
            height="12"
            width="12"
            x="8"
            y="4"
          />
          <rect
            fill="#E0D7FE"
            height="12"
            width="12"
            x="4"
            y="8"
          />
        </svg>
        <h4
          class="c13 c14"
          color="core.secondary"
          font-family="RT-Alias-Grotesk"
          font-size="2"
          font-weight="400"
        >
          Copy
        </h4>
      </button>
    </div>
  </div>
  <div
    class="c15"
    display="flex"
  >
    <button
      class="c16"
      font-size="3"
      height="max-content"
      type="button"
    >
      Switch
    </button>
    <button
      class="c17"
      font-size="3"
      height="max-content"
      type="button"
    >
      Show on Device
    </button>
  </div>
</div>
`;

exports[`AccountCard renders the card CREATE_MNEMONIC 1`] = `
.c0 {
  min-width: 0;
  box-sizing: border-box;
  border-radius: 8px;
  padding: 16px;
  margin-bottom: 8px;
  color: purple;
  background-color: #5E26FF;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 300px;
  height: 300px;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  box-shadow: 0 0.7px 2.2px -8px rgba(0,0,0,0.18),0 1.7px 5.4px rgba(0,0,0,0.129),0 3.1px 10.1px rgba(0,0,0,0.107),0 5.6px 18.1px rgba(0,0,0,0.09),0 10.4px 33.8px rgba(0,0,0,0.073),0 25px 81px rgba(0,0,0,0.051);
}

.c1 {
  min-width: 0;
  box-sizing: border-box;
  color: #E0D7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
}

.c2 {
  min-width: 0;
  box-sizing: border-box;
  border-width: 0.1875rem;
  border-radius: 8px;
  border-style: solid;
  margin-right: 16px;
  color: #E0D7FE;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 48px;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

.c5 {
  min-width: 0;
  box-sizing: border-box;
  color: #E0D7FE;
}

.c7 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c15 {
  min-width: 0;
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c3 {
  font-family: "RT-Alias-Medium","system-ui","Segoe UI","Roboto",Helvetica;
  font-weight: 700;
  font-size: 1.5rem;
}

.c16 {
  cursor: pointer;
  border: 1px solid #E0D7FE;
  background-color: transparent;
  border-color: #E0D7FE;
  color: #E0D7FE;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  padding: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  height: -webkit-max-content;
  height: -moz-max-content;
  height: max-content;
  border-width: 1px;
  border-radius: 4px;
}

.c16:hover {
  opacity: 0.8;
}

.c11 {
  width: 24;
  height: 24;
}

.c8 {
  font-size: 2rem;
  font-weight: 400;
  line-height: 1.2;
  font-family: RT-Alias-Grotesk;
  overflow: hidden;
  margin: 0;
}

.c4 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
}

.c6 {
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1.4;
  font-family: RT-Alias-Grotesk;
  margin: 0;
}

.c13 {
  color: #E0D7FE;
  font-size: 1.125rem;
  font-weight: 400;
  line-height: 1;
  font-family: RT-Alias-Grotesk;
  margin: 0;
  margin-top: 0;
  margin-left: 4px;
}

.c10 {
  cursor: pointer;
  border: 1px solid #1AD08F;
  background-color: #1AD08F;
  border-color: #1AD08F;
  color: #08442F;
  font-size: 1.125rem;
  -webkit-transition: 0.18s ease-in-out;
  transition: 0.18s ease-in-out;
  border-radius: 4px;
  margin-left: 8px;
  padding-top: 8px;
  padding-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 48px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border-width: 1px;
  border-radius: 4px;
  opacity: 1 !important;
  border: 0;
  background: transparent;
  padding: 0;
  outline: none;
}

.c10:hover {
  opacity: 0.8;
}

.c12 {
  -webkit-transition: 0.24s ease-in-out;
  transition: 0.24s ease-in-out;
}

.c9:hover .c12 {
  -webkit-transform: scale(1.25);
  -ms-transform: scale(1.25);
  transform: scale(1.25);
}

.c14 {
  -webkit-transition: 0.18s ease-in;
  transition: 0.18s ease-in;
  opacity: 0;
}

.c9:hover .c14 {
  opacity: 1;
}

<div
  class="c0"
  color="purple"
  display="flex"
  height="300px"
  width="300px"
>
  <div
    class="c1"
    color="card.account.color"
    display="flex"
  >
    <div
      class="c2"
      color="card.account.color"
      display="flex"
      size="6"
    >
      <h3
        class="c3"
      >
        Ac
      </h3>
    </div>
    <p
      class="c4"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      Account
    </p>
  </div>
  <div
    class="c5"
    color="card.account.color"
  >
    <p
      class="c6"
      font-family="RT-Alias-Grotesk"
      font-size="2"
      font-weight="400"
    >
      Your Address
    </p>
    <div
      class="c7"
      display="flex"
    >
      <h2
        class="c8"
        font-family="RT-Alias-Grotesk"
        font-size="5"
        font-weight="1"
        overflow="hidden"
      >
        t0123 ... 6789
      </h2>
      <button
        class="c9 c10"
        display="flex"
        font-size="3"
        height="6"
      >
        <svg
          class="c11 c12"
          fill="none"
          height="24"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <rect
            fill="#1A0066"
            height="12"
            width="12"
            x="8"
            y="4"
          />
          <rect
            fill="#E0D7FE"
            height="12"
            width="12"
            x="4"
            y="8"
          />
        </svg>
        <h4
          class="c13 c14"
          color="core.secondary"
          font-family="RT-Alias-Grotesk"
          font-size="2"
          font-weight="400"
        >
          Copy
        </h4>
      </button>
    </div>
  </div>
  <div
    class="c15"
    display="flex"
  >
    <button
      class="c16"
      font-size="3"
      height="max-content"
      type="button"
    >
      Switch
    </button>
  </div>
</div>
`;
